# efi

./: ATTRIBUTIONS.md  COPYRIGHT.md  Cargo.toml  LICENSE  NOTICES.md  README.md  rust-toolchain
.github/workflows/: rust.yml
examples/: sample_efi_app.rs
src/: allocator.rs  boot_services.rs  boxed.rs  console.rs  device_path.rs  events.rs  fmt.rs  image.rs  io.rs  lib.rs  net.rs  time.rs  utils.rs
src/ffi/: base.rs  boot_services.rs  console.rs  device_path.rs  ip4.rs  load_file.rs  loaded_image.rs  managed_network.rs  media.rs  mod.rs  pxe.rs  pxebc.rs  runtime_services.rs  simple_network.rs  tcp4.rs  udp4.rs
src/io/: buffered.rs  cursor.rs  error.rs  impls.rs  memchr.rs  mod.rs  prelude.rs  util.rs
src/net/: addr.rs  dhcp.rs  ifconfig.rs  mod.rs  parser.rs  pxebc.rs
src/net/dns/: builder.rs  enums.rs  error.rs  header.rs  mod.rs  name.rs  parser.rs  structs.rs
src/net/dns/rdata/: a.rs  aaaa.rs  cname.rs  mod.rs  mx.rs  ns.rs  opt.rs  ptr.rs  soa.rs  srv.rs  txt.rs
src/protocols/: console.rs  device_path.rs  ip4.rs  load_file.rs  loaded_image.rs  managed_network.rs  mod.rs  pxe.rs  simple_network.rs  tcp4.rs
