[package]
name = "efi"
version = "0.2.1"
authors = ["Gurinder Singh <frederick.the.fool@gmail.com>"]
edition = "2018"
description = "Ergonomic Rust bindings for writing UEFI applications"
repository = "https://github.com/gurry/efi"
readme = "README.md"
keywords = ["bindings", "uefi", "efi", "boot-loader", "os-loader"]
categories = ["api-bindings", "no-std", "os"]
license = "MIT"

[features]
default = ["allocator"]
allocator = []

[dependencies]
ffi = { package = "efi_ffi", version = "0.1.1" }
byteorder = { version = "1", default-features = false }
rlibc = "1.0.0"
utf8-width = "0.1.4"

[dependencies.failure]
version = "0.1.1"
default-features = false
features = ["derive"]
